5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/1685/executions/1602_1446.log
== TEST (2019-03-20 19:12:36) 
-- CODE:
x=float(input("quantidade de litros comprados:"))
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:15:21) 
-- CODE:
x=float(input("quantidade de litros comprados:"))
y=float(input("quantidade de litros doados:"))
z=float(input("quantidade de litros que restou:"))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:23:28) 
-- CODE:
x=float(input("quantidade de litros comprados:"))
z=float(input("quantidade de litros que ficou:"))
total=x*2/3=z
-- ERROR:
File "XXXX", line 3
    total=x*2/3=z
         ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:23:50) 
-- CODE:
x=float(input("quantidade de litros comprados:"))
z=float(input("quantidade de litros que ficou:"))
total=(x*2/3)z
-- ERROR:
File "XXXX", line 3
    total=(x*2/3)z
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:26:35) 
-- CODE:
x=float(input("quantidade de litros comprados:"))
z=float(input("quantidade de litros que ficou com michel:"))
total=x/3

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    z=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:27:27) 
-- CODE:
x=float(input("quantidade de litros comprados:"))
z=float(input("quantidade de litros que ficou com michel:"))
total=x/3
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    z=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:27:49) 
-- CODE:
x=float(input("quantidade de litros comprados:"))
z=float(input("quantidade de litros que ficou com michel:"))
total=x/3
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    z=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:28:07) 
-- CODE:
x=float(input("quantidade de litros comprados:"))
z=float(input("quantidade de litros que ficou com michel:"))
total=x/3
print(total)
-- EXECUTION TIME:
0.16075
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1446/main.py", line 2, in <module>
    z=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:29:06) 
-- CODE:
x=float(input("quantidade de litros comprados:"))
z=float(input("quantidade de litros que ficou com michel:"))
total=x/3-2/3
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    z=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:29:33) 
-- CODE:
x=float(input("quantidade de litros comprados:"))
z=float(input("quantidade de litros que ficou com michel:"))
total=x/3-2/3
print(total)
-- EXECUTION TIME:
0.200705
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1446/main.py", line 2, in <module>
    z=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:30:33) 
-- CODE:
x=float(input("quantidade de litros comprados:"))
z=float(input("quantidade de litros que ficou com michel:"))
total=x/3-2/3
print(round(x, 3)total)
-- EXECUTION TIME:
0.209522
-- ERROR:
  File "/home/codebench/codes/1602/1446/main.py", line 4
    print(round(x, 3)total)
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:30:38) 
-- CODE:
x=float(input("quantidade de litros comprados:"))
z=float(input("quantidade de litros que ficou com michel:"))
total=x/3-2/3
print(round(x, 3)total)
-- ERROR:
File "XXXX", line 4
    print(round(x, 3)total)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:30:48) 
-- CODE:
x=float(input("quantidade de litros comprados:"))
z=float(input("quantidade de litros que ficou com michel:"))
total=x/3-2/3
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    z=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:32:15) 
-- CODE:
x=float(input("quantidade de litros comprados:"))
michael=x/3
print(michael)
-- OUTPUT:
2.3333333333333335
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:32:50) 
-- CODE:
x=float(input("quantidade de litros comprados:"))
michael=x/3
print(round(michael,3))
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:32:57) 
-- CODE:
x=float(input("quantidade de litros comprados:"))
michael=x/3
print(round(michael,3))
-- EXECUTION TIME:
0.166723
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.667
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
